# harbour-cloud-26

./: .gitignore  AGENTS.md  HELP.md  README.md  build.gradle.kts  compose.yaml  run.sh  toxiproxy.json
client/: README.md  generate_csv.py  import_payments.py  payments.csv  pyproject.toml
coffee-place-client/: client.py  payments_sample.csv
data/: payments.csv
docs/: CSV_IMPORT.md
docs/superpowers/plans/: 2026-06-12-coffee-payments-sync.md
docs/superpowers/specs/: 2026-06-12-coffee-payments-sync-design.md
lb/: README.md  config.json  demo_client.py  load_balancer.py  run_instances.sh  test_load_balancer.py
load-balancer/: .env.example  README.md  package.json  pnpm-lock.yaml  run-demo.sh
load-balancer/src/: backendPool.ts  balancer.ts  config.ts  healthChecker.ts  server.ts
load_balancer/: README.md  client_test.py  instances.json  load_balancer.py
samples/: payments-sample.csv
scripts/: README.md  sample_payments.csv  upload_payments.py
src/main/resources/: application-lb.properties  application.properties
src/test/resources/: payments.csv
submissions/csv-uploader/: .gitignore  README.md  payments.csv  test_uploader.py  uploader.py
submissions/load-balancer/: README.md  config.json  load_balancer.py  test_load_balancer.py
tools/coffee-payments-sync/: .gitignore  README.md  sample_payments.csv
tools/coffee-payments-sync/coffee_sync/: __init__.py  __main__.py  client.py  ledger.py  parser.py
tools/coffee-payments-sync/tests/: _fake_server.py  test_client.py  test_end_to_end.py  test_ledger.py  test_parser.py
tools/coffee_payments_sync/: README.md  coffee_payments_sync.py  sample_payments.csv  test_coffee_payments_sync.py
tools/redirect-load-balancer/: README.md  config.json  demo.py  run_instances.sh
tools/redirect-load-balancer/loadbalancer/: __init__.py  __main__.py  config.py  health.py  registry.py  (+1 more)
uploader/: CMakeLists.txt
uploader/.cache/clangd/index/: client.cpp.A7BE94F99E800A7F.idx  client.hpp.A3D34EEC73A9D7CF.idx  main.cpp.5AD0AC9C4D9DA707.idx  parser.cpp.E65585DDCA4B5C0C.idx  parser.hpp.A2EFC6AE594C6168.idx  payment.hpp.46AD297D5FB29D44.idx
uploader/include/uploader/: client.hpp  parser.hpp  payment.hpp
uploader/sample/: sample-payments.csv
uploader/src/: client.cpp  main.cpp  parser.cpp
uploader/tests/: test_parser.cpp
(+68 files in other folders)
